About me seperate page added

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
             <h1>Ashiq Uddin Pranto</h1>
         </div>
         <div class="nav-menu col-6">
-            <a href="#">Home</a>
-            <a href="#about-me-id">About Me</a>
+            <a href="/index.html">Home</a>
+            <a href="/About_me.html">About me</a>
+            <!-- <a href="#about-me-id">About Me</a> -->
             <a href="#skill-id">Skill</a>
             <a href="#contact">Contact</a>
         </div>
